# pi-bench

./: .dockerignore  .env.example  .gitignore  DOCKER_BUILD.md  DOCKER_BUILD_PURPLE.md  Dockerfile  Dockerfile.purple  Dockerfile.purple-nebius  Dockerfile.purpley  README.md  pyproject.toml  scenario.toml
amber/: amber-manifest-green.json5
data/_examples/: friendly_then_flip.json
data/adaptation/: policy.md  rules.json  tasks.json
data/compliance/: policy.md  rules.json  tasks.json
data/conflict_resolution/: policy.md  rules.json  tasks.json
data/detection/: policy.md  rules.json  tasks.json
data/explainability/: policy.md  rules.json  tasks.json
data/mock/: db.json  policy.md  tasks.json
data/process/: policy.md  rules.json  tasks.json
data/restraint/: policy.md  rules.json  tasks.json
data/robustness/: policy.md  rules.json  tasks.json
data/understanding/: policy.md  rules.json  tasks.json
docs/: CHANGELOG.md  CUSTOM_RUNNER.md  LEADERBOARD.md  QUICKSTART.md  SPEC.md  final_checklist.md
docs/plans/: 2026-01-29-competition-gap-plan.md
examples/: airline_policy.py  custom_policy.py  custom_runner.py  custom_scenario.py
examples/a2a_demo/: purple_server.py
results/: .gitkeep
scripts/: e2e_test.sh  example_result_structure.py  ralph_harden_benchmark.md  run_benchmark.py  run_mt_eval.py  test_dual_agent.py  test_gpt52.sh  test_llm_purple.py  test_nebius.sh
src/pi_bench/: __init__.py  artifact.py  bench.py  cli.py  metrics.py  rate_limiting.py  registry.py  score.py  simulation_adapter.py  trace.py
src/pi_bench/a2a/: __init__.py  assessment.py  bootstrap.py  engine.py  executor.py  mt_scenarios.py  protocol.py  protocols.py  purple_adapter.py  results.py  scenarios.py  server.py  tool_executor.py
src/pi_bench/adapters/: __init__.py  litellm.py  (+3 more)
src/policybeats/: __init__.py  artifact.py  bench.py  cli.py  metrics.py  score.py  simulation_adapter.py  trace.py  types.py
tests/: __init__.py  test_a2a.py  test_artifact.py  test_bench.py  test_dataset_packs.py  test_determinism.py  test_gdpr_pack.py  test_hard_scenarios.py  test_integration_a2a.py  test_integration_bench.py  test_new_rule_types.py  test_obligation_metrics.py  test_orchestration.py  test_protocol.py  test_runner.py  test_scoring.py  test_sim_tools.py  test_sim_types.py  test_simulation_adapter.py  test_task_loader.py
(+68 files in other folders)
