[project]
name = "pi-bench"
version = "0.1.0"
description = "Deterministic policy compliance evaluator for AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.81.3",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
llm = ["litellm>=1.0"]
a2a = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "aiohttp>=3.11.0",
    "pydantic>=2.10.0",
    "a2a-sdk>=0.3.0",
    "a2a-server>=0.6.0",
]

[project.scripts]
pi-bench = "pi_bench.cli:main"
pi-bench-green = "pi_bench.a2a.server:main"
gpt-oss-sg-120b = "pi_bench.purple.nebius_unified_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pi_bench"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
]

[tool.ruff]
src = ["src", "tests"]
line-length = 100
exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
